// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryList should render correctly - with no access 1`] = `
<div
  class="ins-c-inventory__no-access"
>
  <div
    class="pf-c-empty-state ins-c-not-authorized ins-c-inventory__no--access"
  >
    <div
      class="pf-c-empty-state__content"
    >
      <svg
        aria-hidden="true"
        class="pf-c-empty-state__icon"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 448 512"
        width="1em"
      >
        <path
          d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
        />
      </svg>
      <h5
        class="pf-c-title pf-m-lg"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        You do not have access to Inventory
      </h5>
      <div
        class="pf-c-empty-state__body"
      >
        <div>
          To view your systems, you must be granted inventory access from your Organization Administrator.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InventoryList should render correctly 1`] = `
<div
  class="pf-l-grid ins-inventory-list"
  gutter="sm"
>
  <div
    class="pf-l-grid__item pf-m-12-col"
  >
    <table
      aria-label="Host inventory"
      class="ins-c-entity-table pf-c-table pf-m-grid-md pf-m-compact pf-m-sticky-header"
      data-ouia-component-id="OUIA-Generated-Table-2"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class=""
      >
        <tr
          aria-label=""
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-1"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <th
            class=""
            data-key="0"
            data-label="One"
            scope="col"
          >
            One
          </th>
        </tr>
      </thead>
      <tbody
        class=""
        role="rowgroup"
      >
        <tr
          aria-label=""
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-2"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            colspan="1"
            data-key="0"
          >
            <div
              class="pf-c-empty-state"
              data-ouia-component-id="empty-state"
              data-ouia-component-type="PF4/EmptyState"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-empty-state__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-c-empty-state__icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align:-0.125em"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
                <h5
                  class="pf-c-title pf-m-lg"
                  data-ouia-component-id="OUIA-Generated-Title-1"
                  data-ouia-component-type="PF4/Title"
                  data-ouia-safe="true"
                >
                  No matching systems found
                </h5>
                <div
                  class="pf-c-empty-state__body"
                >
                  To continue, edit your filter settings and try again
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
